인코딩 필터 등록 -jin-

--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -5,7 +5,7 @@
 		padding:0;
 	}
 	
-	/* 기본 header, nav, main, aside 영역 나누기  */
+	/* 기본 header, nav, main(container), aside 영역 나누기  */
 	#header{
 		align-items: center;
 		background-color: #F7F8FC;
