--- a/2weeks/src/main/webapp/resources/css/covidReportList.css
+++ b/2weeks/src/main/webapp/resources/css/covidReportList.css
@@ -1,25 +1,25 @@
-@charset "EUC-KR";
+@charset "UTF-8";
 
 p{
 	font-size: 13px;
-    margin-left: 10px;	
+	margin-left: 10px;
 }
 span{
-	color:red;	
+	color: red;
 }
 #reportTab{
-	font-size: 13px;	
+	font-size:13px;
 }
 table th{
-	font-weight: bolder;
-	text-align: center;	
+	font-weight:bolder;
+	text-align: center;
 }
 table td{
-	text-align: center;	
+	text-align: center;
 }
-td:nth-child(2) {
+td:nth-child(2){
 	text-align: left;
 }
-#reportPageBar{
+#reporPageBar{
 	text-align: center;
 }
