--- a/2weeks/src/main/webapp/resources/css/chat/groupChatting.css
+++ b/2weeks/src/main/webapp/resources/css/chat/groupChatting.css
@@ -4,18 +4,19 @@
     border:1px solid;
     width:auto;
     height:550px;    
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 #tempAlert{
-    width: 100%;
+    width: 70%;
     height: 34px;
     background-color: #808080;
     opacity: .6;
     position: absolute;
     bottom: 40px;
+    margin: 0 10px 10px 60px;
+    border-radius: 10px;
     display: none;
-    margin-bottom:10px;
 }
 
 #tempAlert>p{
@@ -24,5 +25,26 @@
     font-weight: 500;
     color: white;
     opacity: 1;
-    margin-top: 10px;
+    margin-top: 8px;
+}
+
+#entryAlert{
+	width: 100%;
+    height: 34px;
+    background-color: #808080;
+    opacity: .6;
+    position: absolute;    
+    border-radius: 10px;   
+    display:none;
+    overflow: hidden; 
+}
+
+#entryAlert>p{
+	text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    color: white;
+    opacity: 1;
+    margin-top: 8px;
+    overflow: hidden;
 }
