--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -5,11 +5,16 @@
 		padding:0;
 	}
 	
+	/* a태그 기본 속성 없애기 */
+	a { text-decoration:none !important } 
+	a:hover { text-decoration:none !important }
+	a:visited {color:black;}
+	
 	/* 기본 header, nav, main(container), aside 영역 나누기  */
 	#header{
-		align-items: center;
 		background-color: #F7F8FC;
 		display: flex;
+		align-items: center;
 		width: 100%;
 		position:fixed;
 		height:60px; /* header 높이 */
@@ -50,11 +55,14 @@
     
 	/* header css 속성 */
 	.header-logo-area {
-		align-items: center;
 		background-color: #E1E6FF;
         width:15%; /* 사이드바 너비와 동일하게 맞춰줘야 됨 */
         height:100%;
 		text-align:center;
+		display:flex;
+		align-items: center;
+		justify-content: center;
+		left:0;
 	}
 	.header-logo{
 		color: black;
@@ -65,25 +73,33 @@
 		opacity: 0.7;
 	}
 	.header-search-area{
-		display: flex;
-		width: 50%;
+		width: 60%;
 		height: 60px;
+		display:flex;
 		align-items: center;
-		padding:0 15px ;
+		justify-content: flex-end;
+		padding:0;
 	}
-	.header-search{		
-		display: flex;
+	#searchKeyword{	
 		margin:0;
 		padding:0;
-		width:40%;
-		height:30px;
-		text-align: right;		
+		width:60%;
+		height:26px;
+		margin-right:-5px;
+		text-align: right;
+		border:0.5px solid gray;
+		border-radius:4px;	
+	}
+	#searchKeyword:focus{
+		outline:0.5px solid #E1E6FF;
 	}
 	.header-icon-area{
-		display: flex;
 		height: 60px;
+		display: flex;
 		align-items: center;
+		justify-content: flex-start;
 		padding:0 15px;
+	}
 	}           
 	.header-divider {
 		height: 32px;
@@ -92,7 +108,7 @@
 	.header-icon {
 		height: 24px;
 		width: 24px;
-		margin-left: 20px;
+		margin-left: 20px;	
 	}
 	.header-profile-icon{
 		height: 24px;
@@ -108,4 +124,6 @@
 		font-size: 20px;
 		margin-left: 25px;
 	}
+	
+	
 </style>
