--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -1,111 +1,145 @@
 @charset "UTF-8";
-<style>	
-	body{
-		margin:0;
-		padding:0;
-	}
-	
-	/* 기본 header, nav, main(container), aside 영역 나누기  */
-	#header{
-		align-items: center;
-		background-color: #F7F8FC;
-		display: flex;
-		width: 100%;
-		position:fixed;
-		height:60px; /* header 높이 */
-		top:0;
-		left:0;
-		right:0;
-	}		
-	#sidebar {
-		left:0;
-		align-items: flex-start;
-        width:15%; /* 사이드바 너비 */
-        overflow: hidden;
-		left:0;
-		top:60px; /* header 높이에 따라 변경해야 됨 */
-		position:fixed;
-		margin:0;
-		padding:0;
-		height:100%;
-	}
-	.container {	 
-		margin-left:15%; /* 사이드바 너비만큼 띄움 */
-		margin-top:60px; /* 헤더 높이만큼 띄움 */
-		background-color: #F7F8FC;
-		min-height:800px;
-		width:80%; /* 본문 너비 */
-		padding:15px;
-	}  	
-	#aside {
-		display: flex;
-		background-color: #EEF0FE; 
-		width: 5%; /* 페이지 스크롤 영역 너비 */
-		top:60px; /*  header 높이와 동일하게 맞춰줘야 됨 */
-		right:0;
-		position:fixed;
-		min-height:400px;
-		height:100%;
-    }   
-    
-	/* header css 속성 */
-	.header-logo-area {
-		align-items: center;
-		background-color: #E1E6FF;
-        width:15%; /* 사이드바 너비와 동일하게 맞춰줘야 됨 */
-        height:100%;
-		text-align:center;
-	}
-	.header-logo{
-		color: black;
-		font-size: 20px;
-		font-weight: bolder;
-		text-align:center;
-		align-items:center;
-		opacity: 0.7;
-	}
-	.header-search-area{
-		display: flex;
-		width: 50%;
-		height: 60px;
-		align-items: center;
-		padding:0 15px ;
-	}
-	.header-search{		
-		display: flex;
-		margin:0;
-		padding:0;
-		width:40%;
-		height:30px;
-		text-align: right;		
-	}
-	.header-icon-area{
-		display: flex;
-		height: 60px;
-		align-items: center;
-		padding:0 15px;
-	}           
-	.header-divider {
-		height: 32px;
-		width: 2px;
-	}
-	.header-icon {
-		height: 24px;
-		width: 24px;
-		margin-left: 20px;
-	}
-	.header-profile-icon{
-		height: 24px;
-		width: 24px;
-	}
-	.header-profile-photo{
-		/* profile 사진 받아올 경우 여기서 사이즈 변경 */
-		height: 30px;
-		width: 30px;
-		display:none;
-	}
-	.header-profile-text{
-		font-size: 20px;
-		margin-left: 25px;
-	}
-</style>
+
+body{
+	margin:0;
+	padding:0;
+}
+
+/* 기본 header, nav, main(container), aside 영역 나누기  */
+#header{
+	align-items: center;
+	background-color: #F7F8FC;
+	display: flex;
+	width: 100%;
+	position:fixed;
+	height:60px; /* header 높이 */
+	top:0;
+	left:0;
+	right:0;
+}		
+#sidebar {
+	left:0;
+	align-items: flex-start;
+	width:15%; /* 사이드바 너비 */
+	overflow: hidden;
+	left:0;
+	top:60px; /* header 높이에 따라 변경해야 됨 */
+	position:fixed;
+	margin:0;
+	padding:0;
+	height:100%;
+}
+.container {	 
+	margin-left:15%; /* 사이드바 너비만큼 띄움 */
+	margin-top:60px; /* 헤더 높이만큼 띄움 */
+	background-color: #F7F8FC;
+	min-height:800px;
+	width:80%; /* 본문 너비 */
+	padding:15px;
+}  	
+#aside {
+	display: flex;
+	background-color: #EEF0FE; 
+	width: 5%; /* 페이지 스크롤 영역 너비 */
+	top:60px; /*  header 높이와 동일하게 맞춰줘야 됨 */
+	right:0;
+	position:fixed;
+	min-height:400px;
+	height:100%;
+}   
+
+/* header css 속성 */
+.header-logo-area {
+	align-items: center;
+	background-color: #E1E6FF;
+	width:15%; /* 사이드바 너비와 동일하게 맞춰줘야 됨 */
+	height:100%;
+	text-align:center;
+}
+.header-logo{
+	color: black;
+	font-size: 20px;
+	font-weight: bolder;
+	text-align:center;
+	align-items:center;
+	opacity: 0.7;
+}
+.header-search-area{
+	display: flex;
+	width: 50%;
+	height: 60px;
+	align-items: center;
+	padding:0 15px ;
+}
+.header-search{		
+	display: flex;
+	margin:0;
+	padding:0;
+	width:40%;
+	height:30px;
+	text-align: right;		
+}
+.header-icon-area{
+	display: flex;
+	height: 60px;
+	align-items: center;
+	padding:0 15px;
+}           
+.header-divider {
+	height: 32px;
+	width: 2px;
+}
+.header-icon {
+	height: 24px;
+	width: 24px;
+	margin-left: 20px;
+}
+.header-profile-icon{
+	height: 24px;
+	width: 24px;
+}
+.header-profile-photo{
+	/* profile 사진 받아올 경우 여기서 사이즈 변경 */
+	height: 30px;
+	width: 30px;
+	display:none;
+}
+.header-profile-text{
+	font-size: 20px;
+	margin-left: 5px;
+}
+
+
+
+
+#nick {
+	font-weight: bolder;
+	font-size: 17px;
+}	
+.dropdown{
+	/* border: solid 1px; */
+	position: relative;
+	display: flex;
+	width: 165px;
+	margin-left: 25px;
+	cursor: pointer;
+}
+.dropdown-content{
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 130px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;	
+    margin-top: 23px;	
+}
+.dropdown-content a{
+	color: black;
+	padding: 10px 15px;
+	text-decoration: none;
+	text-align: center;
+	display: block;	
+	font-size:15px;
+}
+.dropdown-content a:hover {background-color: #ddd;}
+.dropdown:hover .dropdown-content {display: block;}
