--- a/2weeks/.settings/org.eclipse.wst.common.component
+++ b/2weeks/.settings/org.eclipse.wst.common.component
@@ -1,83 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-<<<<<<< HEAD
-                    	
-=======
-                        	
-    
->>>>>>> 7f5dacf74a116ce9f98faaaaaf70ed9626ff1e92
-    
-    
-    
-    
-    <wb-module deploy-name="spring-1.0.0-BUILD-SNAPSHOT">
-<<<<<<< HEAD
-                                                
-=======
-                                                        
-        
->>>>>>> 7f5dacf74a116ce9f98faaaaaf70ed9626ff1e92
-        
-        
-        
-        
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-<<<<<<< HEAD
-                                        		
-=======
-                                                		
-        
->>>>>>> 7f5dacf74a116ce9f98faaaaaf70ed9626ff1e92
-        
-        
-        
-        
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-<<<<<<< HEAD
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-                                        		
-=======
-                                                		
-        
->>>>>>> 7f5dacf74a116ce9f98faaaaaf70ed9626ff1e92
-        
-        
-        
-        
-        <property name="java-output-path" value="target/classes"/>
-<<<<<<< HEAD
-                                                
-=======
-                                                        
-        
->>>>>>> 7f5dacf74a116ce9f98faaaaaf70ed9626ff1e92
-        
-        
-        
-        
-        <property name="context-root" value="spring"/>
-<<<<<<< HEAD
-                                        	
-=======
-                                                	
-    
->>>>>>> 7f5dacf74a116ce9f98faaaaaf70ed9626ff1e92
-    
-    
-    
-    
-    </wb-module>
-<<<<<<< HEAD
-                    
-=======
-                        
-
->>>>>>> 7f5dacf74a116ce9f98faaaaaf70ed9626ff1e92
-
-
-
-
-</project-modules>
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId"/>
