--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -1,135 +1,5 @@
 @charset "UTF-8";
-<<<<<<< HEAD
-<style>	
-	body{
-		margin:0;
-		padding:0;
-	}
-	
-	/* a태그 기본 속성 없애기 */
-	a { text-decoration:none !important } 
-	a:hover { text-decoration:none !important }
-	a:visited {color:black;}
-	
-	/* 기본 header, nav, main(container), aside 영역 나누기  */
-	#header{
-		background-color: #F7F8FC;
-		display: flex;
-		align-items: center;
-		width: 100%;
-		position:fixed;
-		height:60px; /* header 높이 */
-		top:0;
-		left:0;
-		right:0;
-	}		
-	#sidebar {
-		left:0;
-		align-items: flex-start;
-        width:15%; /* 사이드바 너비 */
-        overflow: hidden;
-		left:0;
-		top:60px; /* header 높이에 따라 변경해야 됨 */
-		position:fixed;
-		margin:0;
-		padding:0;
-		height:100%;
-	}
-	.container {	 
-		margin-left:15%; /* 사이드바 너비만큼 띄움 */
-		margin-top:60px; /* 헤더 높이만큼 띄움 */
-		background-color: #F7F8FC;
-		min-height:800px;
-		width:80%; /* 본문 너비 */
-		padding:15px;
-	}  	
-	#aside {
-		display: flex;
-		background-color: #EEF0FE; 
-		width: 5%; /* 페이지 스크롤 영역 너비 */
-		top:60px; /*  header 높이와 동일하게 맞춰줘야 됨 */
-		right:0;
-		position:fixed;
-		min-height:400px;
-		height:100%;
-    }   
-    
-	/* header css 속성 */
-	.header-logo-area {
-		background-color: #E1E6FF;
-        width:15%; /* 사이드바 너비와 동일하게 맞춰줘야 됨 */
-        height:100%;
-		text-align:center;
-		display:flex;
-		align-items: center;
-		justify-content: center;
-		left:0;
-	}
-	.header-logo{
-		color: black;
-		font-size: 20px;
-		font-weight: bolder;
-		text-align:center;
-		align-items:center;
-		opacity: 0.7;
-	}
-	.header-search-area{
-		width: 60%;
-		height: 60px;
-		display:flex;
-		align-items: center;
-		justify-content: flex-end;
-		padding:0;
-	}
-	#searchKeyword{	
-		margin:0;
-		padding:0;
-		width:60%;
-		height:26px;
-		margin-right:-5px;
-		text-align: right;
-		border:0.5px solid gray;
-		border-radius:4px;	
-	}
-	#searchKeyword:focus{
-		outline:0.5px solid #E1E6FF;
-	}
-	.header-icon-area{
-		height: 60px;
-		display: flex;
-		align-items: center;
-		justify-content: flex-start;
-		padding:0 15px;
-	}
-	}           
-	.header-divider {
-		height: 32px;
-		width: 2px;
-	}
-	.header-icon {
-		height: 24px;
-		width: 24px;
-		margin-left: 20px;	
-	}
-	.header-profile-icon{
-		height: 24px;
-		width: 24px;
-	}
-	.header-profile-photo{
-		/* profile 사진 받아올 경우 여기서 사이즈 변경 */
-		height: 30px;
-		width: 30px;
-		display:none;
-	}
-	.header-profile-text{
-		font-size: 20px;
-		margin-left: 25px;
-	}
-	
-	
-</style>
-=======
-
+<style>
 body{
 	margin:0;
 	padding:0;
@@ -160,12 +30,12 @@ body{
 	height:100%;
 }
 .container {	 
-	margin-left:15%; /* 사이드바 너비만큼 띄움 */
-	margin-top:60px; /* 헤더 높이만큼 띄움 */
+	margin-left:15% !important; /* 사이드바 너비만큼 띄움 */
+	margin-top:60px !important; /* 헤더 높이만큼 띄움 */
 	background-color: #F7F8FC;
 	min-height:800px;
-	width:80%; /* 본문 너비 */
-	padding:15px;
+	width:80% !important; /* 본문 너비 */
+	padding:15px !important;
 }  	
 #aside {
 	display: flex;
@@ -185,14 +55,18 @@ body{
 	width:15%; /* 사이드바 너비와 동일하게 맞춰줘야 됨 */
 	height:100%;
 	text-align:center;
+		display:flex;
+		align-items: center;
+		justify-content: center;
+		left:0;
 }
 .header-logo{
-	color: black;
-	font-size: 20px;
-	font-weight: bolder;
-	text-align:center;
-	align-items:center;
-	opacity: 0.7;
+		width: 60%;
+		height: 60px;
+		display:flex;
+		align-items: center;
+		justify-content: flex-end;
+		padding:0;
 }
 .header-search-area{
 	display: flex;
@@ -201,19 +75,25 @@ body{
 	align-items: center;
 	padding:0 15px ;
 }
-.header-search{		
-	display: flex;
-	margin:0;
-	padding:0;
-	width:40%;
-	height:30px;
-	text-align: right;		
-}
+#searchKeyword{	
+		margin:0;
+		padding:0;
+		width:60%;
+		height:26px;
+		margin-right:-5px;
+		text-align: right;
+		border:0.5px solid gray;
+		border-radius:4px;	
+	}
+	#searchKeyword:focus{
+		outline:0.5px solid #E1E6FF;
+	}
 .header-icon-area{
-	display: flex;
 	height: 60px;
-	align-items: center;
-	padding:0 15px;
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		padding:0 15px;
 }           
 .header-divider {
 	height: 32px;
@@ -238,9 +118,6 @@ body{
 	font-size: 20px;
 	margin-left: 5px;
 }
-
-
-
 
 #nick {
 	font-weight: bolder;
@@ -273,4 +150,4 @@ body{
 }
 .dropdown-content a:hover {background-color: #ddd;}
 .dropdown:hover .dropdown-content {display: block;}
->>>>>>> refs/heads/master
+<style>
