--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -36,12 +36,12 @@ a:visited {color:black;}
 	height:100%;
 }
 .container {	 
-	margin-left:15%; /* 사이드바 너비만큼 띄움 */
-	margin-top:60px; /* 헤더 높이만큼 띄움 */
+	margin-left:15% !important;/* 사이드바 너비만큼 띄움 */
+	margin-top:60px !important; /* 헤더 높이만큼 띄움 */
 	background-color: #F7F8FC;
 	min-height:800px;
-	width:80%; /* 본문 너비 */
-	padding:15px;
+	width:80% !important; /* 본문 너비 */
+	padding:15px !important;
 }  	
 #aside {
 	display: flex;
