--- a/2weeks/src/main/webapp/resources/css/member/signup.css
+++ b/2weeks/src/main/webapp/resources/css/member/signup.css
@@ -6,6 +6,7 @@
     --color-black: #000000;
     --color-white: #ffffff;
     --color-grey: #E2E2E2;
+    --color-greyfont:#999999;
 
     /* Font size */
     --font-large:48px;
@@ -51,104 +52,90 @@
 *{
 font-family :'Pretendard'	
 }
-
-.login_box {
-	border :1px solid var(--color-grey);
-	border-radius:10px;
-	background-color : var(--color-white);
-}
-
-
 .center-block {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
+.signup_box {
+	border :1px solid var(--color-grey);
+	border-radius:10px;
+	background-color : var(--color-white);
+}
 h3{
 	margin-top:30px;
-	margin-bottom: 30px;	
-}
-p{
-	font-size:12px;
-}
-
-/* 아이디/패스워드 입력창  */
-.input_login{
-	width : 60%;
-	height: 50px;
 	margin-bottom: 30px;
-	border: 0 soild var(--color-white);
-	border-bottom: 1px solid var(--color-black);
-	font-size: var(--font-small);
 	
 }
-.input_login:focus {outline:none;}
-
-.input_login::placeholder{
-	font-family: var(--p-font);
-	font-size: var(--font-small);
-}
-
-
-/* 아이디저장 , 아이디비번찾기 */
-.remember_find {
-	display:flex;
-	justify-content: space-evenly;
+input{
+	
+	width : 60%;
+	height: 40px;
 	margin-bottom: 20px;
+	border: 0 soild var(--color-white);
+	border-bottom: 1px solid var(--color-greyfont);
+	font-size: var(--font-small);	
+
 }
-/*체크박스  */
+input:focus {outline:none;}
 
-
-
-
-/*찾기버튼  */
-.find_box{
-cursor:pointer;
-}
-
-.find_click{
-	vertical-align: middle
+.signup_guide{
+	font-size: var(--font-micro);
+	color: var(--color-greyfont);
 }
 
-/* 로그인버튼  */
-.login_btn {
+/*프로필사진  */
+.profile_imgbox{
 	display:flex;
-	justify-content: space-evenly;
-	margin-bottom: 40px;
-	padding-left: 50px;
-	padding-right: 50px;
+	align-items: flex-end;
+
 }
 
 
-.tweeks_login{
-	width:183px;
-	height:45px;
+ .profile_view{
+	border : 1px solid white;
+	width: 100px;
+	height: 100px;
+	border-radius: 100px;
 }
-.tweeks_loginBtn{
+            
+ .preview_img{
 	width:100%;
 	height:100%;
-	border-radius: 10px;
-	border : 0 solid white;
-	background-color : var(--color-black);
-	color: var(--color-white);
-	font-size: var(--font-reqular);
+	border-radius:100px;
+ }
+ 
+ .input_img{
+ 		
+}
+
+/*아이디  */
+.id_input_box {
+	display:flex;
+	flex-direction: column;
+	flex-wrap:wrap;
+	align-content:center;
+	margin-bottom: 25px;
+}
+
+/*패스워드  */
+.pw_input_box {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content:center;
+	margin-bottom: 25px;
 	
 }
 
-/*회원가입 버튼  */
-
-.signup_btn{
-	width:183px;
-	height:45px;
-	border:2px solid var(--color-black);
-	border-radius: 10px;
-	background-color: var(--color-white);
-	font-size: var(--font-reqular);
-	margin-bottom: 20px;
-	
-}
-p{
-	color:var(--bs-gray);
+/*패스워드 확인  */
+.pw2_input_box{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content:center;
 }
 
+
+ 
