--- a/2weeks/src/main/webapp/resources/css/member/signup.css
+++ b/2weeks/src/main/webapp/resources/css/member/signup.css
@@ -65,7 +65,7 @@ font-family :'Pretendard'
 }
 h3{
 	margin-top:30px;
-	margin-bottom: 30px;
+	margin-bottom: 40px;
 	
 }
 input{
@@ -84,31 +84,13 @@ input:focus {outline:none;}
 	font-size: var(--font-micro);
 	color: var(--color-greyfont);
 }
-
-/*프로필사진  */
-.profile_imgbox{
-	display:flex;
-	align-items: flex-end;
-
+/*에러메세지  */
+.errors_message{
+	color:var(--bs-red);
+	font-size: var(--font-micro);
 }
 
 
- .profile_view{
-	border : 1px solid white;
-	width: 100px;
-	height: 100px;
-	border-radius: 100px;
-}
-            
- .preview_img{
-	width:100%;
-	height:100%;
-	border-radius:100px;
- }
- 
- .input_img{
- 		
-}
 
 /*아이디  */
 .id_input_box {
@@ -130,12 +112,184 @@ input:focus {outline:none;}
 }
 
 /*패스워드 확인  */
-.pw2_input_box{
+.pw2_input_box {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	align-content:center;
+	margin-bottom: 25px;
+}
+
+/*이름  */
+.nm_input_box{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: center;
+	margin-bottom: 25px;
+}
+
+/*닉네임  */
+.nic_input_box{
+	display:flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: center;
+	margin-bottom: 25px;
+}
+
+/*폰번호  */
+.phone_input_box{
+	display:flex;
+	flex-direction:column;
+	flex-wrap: wrap;
+	align-content: center;
+	margin-bottom: 25px;
+}
+
+/*이메일  */
+
+.email_input_box{
+	display:flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: center;
+	
 }
 
 
+.email_check_input_box{
+	display:flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: center;
+}
+/*이메일 인증버튼  */
+.email_btn_box{
+	/* width : 60%; */
+	display:flex;
+	justify-content: flex-end;
+}
+.email_check_button{
+	border-radius:40px;
+	padding: 0px 20px 0px 20px;
+	height: 42px;
+	color: #252525;
+    border: 1px solid #dbdbdb;
+    background-color: var(--color-white);
+}
+.email_validation_button{
+	border-radius:40px;
+	padding:0px 20px 0px 20px;
+	height:42px;
+	color:#252525;
+	border: 1px solid #dbdbdb;
+	background-color: var(--color-white);
+	
+}
+
+/*프로필사진  */
+.profile_input_box{
+/* 	display:flex;
+	flex-direction:column;
+	flex-wrap:wrap;
+	align-content:center; */
+	margin-bottom:35px;
+	
+}
+.profile_imgbox{
+	display:flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	border-bottom: 1px solid var(--color-greyfont);
+	padding-bottom: 10px;
+	
+}
+
+            
+ .preview_img{
+	width:100px;
+	height:100px;
+	border-radius:100px;
+ }
  
+ .profile_input_label{
+ 	margin-bottom: 10px;
+ }
+ #profile_input{
+ 	border: 0 solid white;
+ }
+ .input_img{
+ 	display: none;
+ }
+ 
+ .input-file-button{
+  padding: 6px 25px;
+  background-color:var(--color-black);
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+}
+
+/*submit버튼  */
+
+.signup_btn{
+	margin-top: 40px;
+}
+
+.signup_btn {
+  background-color: var(--color-black);
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+ /*  display: inline-block; */
+ 
+  font-size: 1em;
+  font-size: 22px;
+  line-height: 1em;
+  /* margin: 15px 40px; */
+  outline: none;
+  padding: 12px 40px 10px;
+  position: relative;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.signup_btn:before,
+.signup_btn:after {
+  border-color: transparent;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+  border-style: solid;
+  border-width: 0;
+  content: "";
+  height: 24px;
+  position: absolute;
+  width: 24px;
+}
+.signup_btn:before {
+  border-color: var(--color-black);
+  border-right-width: 2px;
+  border-top-width: 2px;
+  right: -5px;
+  top: -5px;
+}
+.signup_btn:after {
+  border-bottom-width: 2px;
+  border-color: var(--color-black);
+  border-left-width: 2px;
+  bottom: -5px;
+  left: -5px;
+}
+.signup_btn:hover,
+.signup_btn.hover {
+  background-color: var(--color-black);
+}
+.signup_btn:hover:before,
+.signup_btn.hover:before,
+.signup_btn:hover:after,
+.signup_btn.hover:after {
+  height: 100%;
+  width: 100%;
+} 
+
+
