--- a/2weeks/src/main/webapp/resources/css/common/footer.css
+++ b/2weeks/src/main/webapp/resources/css/common/footer.css
@@ -1,19 +1,37 @@
-.footer{
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #EEF0FE;
-    text-align: center;
-    padding:20px;
+footer{
+	font-size: 12px;
+	width:100%;
+	background-color: #e8e8e8;
+	padding:10px;
+	margin:0;
+	text-align:center;
+	align-items:center;
+	justify-content: center;
+	padding:20px;
+}
+.footer-col{
+	display:inline-block;
+	margin-left:25px;
+	margin-right:25px;
+	font-family: 'Pretendard';
+	font-size:13px;
+}
+.footer-strong{
+	font-size:20px;
+	font-weight:bolder;
+}
+.footer-strong > div{
+	font-size: 13px;
 }
 
 #icon{
+	padding: 10px 0 0 0;
 	width:200px;
 	height:50px;
 	margin:auto;
 }
 #icon img{
-	width: 50px;
-	height: 50px;
+	width: 45px;
+	height: 45px;
 	margin: 0 5px 0 5px;
 }
