메인 홈페이지 css 수정 -규희-

--- a/2weeks/src/main/webapp/resources/css/common/sidebar.css
+++ b/2weeks/src/main/webapp/resources/css/common/sidebar.css
@@ -1,5 +1,7 @@
 @CHARSET "UTF-8";
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css');
 <style>
+	
 	.sidebar-default {
         width:100%;
         overflow: hidden;
