--- a/2weeks/src/main/webapp/resources/css/common/footer.css
+++ b/2weeks/src/main/webapp/resources/css/common/footer.css
@@ -1,13 +1,20 @@
-footer{
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css');
+
+@font-face {
+	font-family: 'Pretendard';
+	font-weight: 900;
+	font-display: swap;
+	src: local('Pretendard Black'), url('./woff2/Pretendard-Black.woff2') format('woff2'), url('./woff/Pretendard-Black.woff') format('woff');
+}
+
+footer{	
 	font-size: 12px;
-	width:100%;
-	background-color: #e8e8e8;
-	padding:10px;
-	margin:0;
+	width:1440px;
+	background-color: #F2F2F2;
+	margin: auto;
 	text-align:center;
 	align-items:center;
 	justify-content: center;
-	padding:20px;
 }
 .footer-col{
 	display:inline-block;
@@ -15,6 +22,7 @@ footer{
 	margin-right:25px;
 	font-family: 'Pretendard';
 	font-size:13px;
+	padding-top: 20px;
 }
 .footer-strong{
 	font-size:20px;
@@ -25,7 +33,7 @@ footer{
 }
 
 #icon{
-	padding: 10px 0 0 0;
+	padding: 10px 0 20px 0;
 	width:200px;
 	height:50px;
 	margin:auto;
