--- a/2weeks/src/main/webapp/resources/css/search/searchResult.css
+++ b/2weeks/src/main/webapp/resources/css/search/searchResult.css
@@ -1,28 +1,105 @@
 @charset "UTF-8";
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css');
 
-외부 검색 결과
-#searchResult-external{
+.searchResult-area{
 	width:80%;
 	min-height:300px;
-	margin:10%;
 	border-radius:10px;
-	border:0.5px solid blue; /* #f0f0f0; */
+	border:0.5px solid #f0f0f0;
 	background-color:white;
 	white-space:normal;
 	display:inline-block;
+	overflow:hidden;
 }
 
 .searchResult-name{	
 	display: flex;
-	margin:10px;
 	height:fit-content;
   	border-radius:5px;  
   	font-family:'Pretendard';
   	font-weight:bold;
+  	font-size:20px;
+	margin-top:15px;
+	margin-bottom:3px;
+	padding-left:25px;
 }
 .searchResult-list{
-	border: 1px solid red;
 	white-space:normal;
-	width:80%;
+	margin-left:15px;
+	margin-right:15px;
+	padding:10px;
+}
+.searchResult-profile{	
+	display:inline-block;
+}
+.searchResult-profile img{
+	vertical-align:middle;
+	width: 15px;
+	height: 15px;
+}
+.searchResult-writer{
+	
+}
+.searchResult-blogName{
+	margin-left: 3px;
+	display:inline-block;
+	cursor: pointer;
+	color:darkgray;	  
+  	font-family:'Pretendard';
+  	font-size:15px;
+}
+.searchResult-date{
+	display:inline-block;
+	color:darkgray;	  
+  	font-family:'Pretendard';
+  	font-size:15px;
+}
+.searchResult-title{
+	cursor: pointer;
+	color: #123962;
+	font-weight:bold;  
+  	font-family:'Pretendard';
+  	font-size:17px;
+  	margin-top:3px;
+  	margin-bottom:5px;
+}
+.searchResult-content{	  
+  	font-family:'Pretendard';
+  	font-size:15px;
+}
+.searchResult-vertical-divider{
+	border: 0.5px solid darkgray;
+	background-color:darkgray;
+	width: 0.01px;
+	height: 5px;
+	margin-right: 10px;
+	margin-left: 10px;
+	display:inline;
+}
+.searchResult-area hr{
+	background-color:#f0f0f0;
+	border:0px;
+	height:1.5px;
+	padding:0;
+	margin-left:20px;
+	margin-right:20px;
+}
+.searchResult-detail{
+  	background-color:#f0f0f0;
+  	margin:0;
+  	padding:15px;
+  	text-align:center;
+  	display:center;
+}
+.searchResult-detail div{
+	display:inline-block;
+	font-family:'Pretendard';
+  	font-size:17px;
+}
+.searchResult-detail span{
+	font-family:'Pretendard';
+  	font-size:17px;
+  	font-weight:bold;
+  	color: darkgray;
+  	margin-left:5px;
 }
