--- a/2weeks/src/main/webapp/resources/css/common/main.css
+++ b/2weeks/src/main/webapp/resources/css/common/main.css
@@ -3,13 +3,22 @@
 .gridContainer{
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
-	grid-template-rows: repeat(3, minmax(100px, auto));
-	gap: 10px;
+	grid-auto-rows: 150px 300px 500px;	
+	gap: 15px;
 	align-items: stretch;
 }
-.item{
-	border: 1px solid;
+.item{	
+    overflow: hidden;
+    position: relative;
+    border-radius: 14px;
+    background-color: var(--colorBg10);
+    box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%);
 }
+
+.1st{
+	height: 50px;
+}
+
 .item:nth-child(9) {
 	grid-column: 1/5;
 	grid-template-columns: 1fr, 1fr;
