--- a/2weeks/src/main/webapp/resources/css/member/login.css
+++ b/2weeks/src/main/webapp/resources/css/member/login.css
@@ -52,6 +52,10 @@
 font-family :'Pretendard'	
 }
 
+.side_bar{
+	left:40px;
+}
+
 .login_box {
 	border :1px solid var(--color-grey);
 	border-radius:10px;
