--- a/2weeks/src/main/webapp/resources/css/common/main.css
+++ b/2weeks/src/main/webapp/resources/css/common/main.css
@@ -3,7 +3,7 @@
 .gridContainer{
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
-	grid-auto-rows: 150px 300px 500px;	
+	grid-auto-rows: 150px 450px 500px;	
 	gap: 15px;
 	align-items: stretch;
 }
@@ -12,7 +12,7 @@
     position: relative;
     border-radius: 14px;
     background-color: var(--colorBg10);
-    box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%);
+    box-shadow: rgb(0 0 0 / 15%) 0px 5px 10px 0px;
 }
 
 .1st{
@@ -20,13 +20,36 @@
 }
 
 .item:nth-child(9) {
-	grid-column: 1/5;
+	grid-column: 1/4;
 	grid-template-columns: 1fr, 1fr;
 }
 .item:nth-child(10){
-	grid-column: 5/9;
+	grid-column: 4/9;
 	grid-template-columns: 1fr, 1fr;
 }
 .item:nth-child(11){
 	grid-column: 1/9;
+}
+
+.report{
+	width: 375px;;
+	height: 100%;
+}
+#reportTab{
+	font-size: 13px;
+	width: 320px;
+    margin: auto;     
+    table-layout:fixed;
+}
+#reportTab tr td{
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.report>div{
+	font-weight: bolder;
+	font-size: 20px;
+    text-align: center;
+    margin: 25px 15px 15px 15px;
 }
