--- a/2weeks/src/main/webapp/resources/css/member/myBoard.css
+++ b/2weeks/src/main/webapp/resources/css/member/myBoard.css
@@ -1,11 +1,15 @@
 @charset "UTF-8";
 
+#boardLogo{
+	margin-left: 10px;	
+}
+
 .boardListBack h4{
 	text-align:center;
 	font-size: 20px;
 }
 .boardListBack{
-	width:37%;
+	width:30%;
 	min-width: 400px;
 	height:730px;
 	/* background-color: rgba(242,242,242,1); */
@@ -18,14 +22,13 @@
 	margin: 0 5px 0 10px;
 }
 #myBoard{
-	margin: 0 25px 0 40%;
+	margin: 0 25px 0 33%;
 }
 
 .boardList{
-    border: solid 1px;
     width: 100%;
     min-width: 380px;
-    height: 620px;
+    height: 760px;
     margin: auto;
 }
 .myBoardTab{
@@ -44,7 +47,7 @@
 }
 
 .myBoardTab tr th:nth-child(2){
-	width:58%;
+	width:54%;
 	text-align: left;
 }
 .myBoardTab tr th:nth-child(3),
