--- a/2weeks/src/main/webapp/resources/css/common/main.css
+++ b/2weeks/src/main/webapp/resources/css/common/main.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
-
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css');
 .gridContainer{
 	display: grid;
 	grid-template-columns: repeat(8, 1fr);
 	grid-auto-rows: 150px 450px 500px;	
 	gap: 15px;
 	align-items: stretch;
+	font-family: 'Pretendard';
 }
 .item{	
     overflow: hidden;
