--- a/2weeks/src/main/webapp/resources/css/common/main.css
+++ b/2weeks/src/main/webapp/resources/css/common/main.css
@@ -23,15 +23,29 @@
 .item:nth-child(9) {
 	grid-column: 1/4;
 	grid-template-columns: 1fr, 1fr;
+	height:580px; //
 }
 .item:nth-child(10){
 	grid-column: 4/9;
 	grid-template-columns: 1fr, 1fr;
+	height:580px; //
 }
 .item:nth-child(11){
 	grid-column: 1/9;
 }
-
+#home-map-area{
+	text-align:center;
+}
+#mapMove{
+	color: #6E6E6E;
+	font-weight: bolder;
+	font-size: 20px;
+    text-align: center;
+	font-weight: bolder;
+	font-size: 20px;
+    text-align: center;
+    margin: 25px 15px 15px 15px;
+}
 .report{
 	width: 375px;;
 	height: 100%;
@@ -59,7 +73,7 @@
     text-align: center;
     margin: 25px 15px 15px 15px;
 }
-#reportMove:hover{
+#reportMove:hover, #mapMove:hover{
 	color: #6E6E6E;
 	font-weight: bolder;
 }
