--- a/2weeks/src/main/webapp/resources/css/common/sidebar.css
+++ b/2weeks/src/main/webapp/resources/css/common/sidebar.css
@@ -9,13 +9,14 @@
 	border-radius: 15px;
     box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%);
 	margin-top: 20px;
-	background-color: #7879F160;
-	padding-left: 5px;
+	background-color: #D3D8F4;
+	/* padding-left: 5px; */
 }
 .wrap_sub_list, .wrap_sidebar-divider{
 	margin:0;
 	padding:0;
 	/* background-color: #D3D8F4; */
+	cursor:point;
 }
 .sidebar-list{
 	align-items: center;
@@ -23,7 +24,7 @@
 	height: 40px;
 	cursor:point;
 	width:100%;
-	padding-left:5px;
+	padding-left:15px;
 }
 .sidebar-list-hide{
 	display:none;
@@ -36,6 +37,8 @@
 	height: 40px;
 	width:100%;
 	padding-left:20px;
+	align-text:center;
+	cursor:point;
 }
 .sidebar-icon {
 	height: 24px;
