--- a/2weeks/src/main/webapp/resources/css/news/covidNews.css
+++ b/2weeks/src/main/webapp/resources/css/news/covidNews.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
-#team {
-    background: #eee !important;
-}
+
 
 .btn-primary:hover,
 .btn-primary:focus {
@@ -14,22 +11,22 @@
 
 .btn-primary {
     color: #fff;
-    background-color: #007b5e;
-    border-color: #007b5e;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 section {
     padding: 60px 0;
 }
 
-section .section-title {
+.section-title {
     text-align: center;
-    color: #007b5e;
+    color: #000000;
     margin-bottom: 50px;
     text-transform: uppercase;
 }
 
-#team .card {
+.container .card {
     border: none;
     background: #ffffff;
 }
@@ -113,12 +110,13 @@ section .section-title {
 
 .backside .card a {
     font-size: 18px;
-    color: #007b5e !important;
+    color: #000000!important;
+    text-decoration-line : none;
 }
 
 .frontside .card .card-title,
 .backside .card .card-title {
-    color: #007b5e !important;
+    color: #007b5e!important;
 }
 
 .frontside .card .card-body img {
