--- a/2weeks/.settings/org.eclipse.wst.common.component
+++ b/2weeks/.settings/org.eclipse.wst.common.component
@@ -1,47 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                
-    
-    
-    <wb-module deploy-name="spring-1.0.0-BUILD-SNAPSHOT">
-                                
-        
-        
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                
-        
-        
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                                
-<<<<<<< HEAD
-        
-        
-        <property name="context-root" value="spring"/>
-                                
-        
-        
-        <property name="java-output-path" value="/2weeks/target/classes"/>
-=======
-        
-        
-        <property name="java-output-path" value="/2weeks/target/classes"/>
-                                
-        
-        
-        <property name="context-root" value="spring"/>
->>>>>>> 77d8e4ea2d076ba7301a235e8daeb6e194018e55
-                            
-    
-    
-    </wb-module>
-            
-
-
-</project-modules>
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId"/>
