--- a/2weeks/src/main/webapp/resources/css/member/myBoard.css
+++ b/2weeks/src/main/webapp/resources/css/member/myBoard.css
@@ -45,7 +45,7 @@
 	table-layout: fixed;
 	
 }
-.myBoardTab *{
+.myBoardTab *, #reportPageBar{
 	text-align: center;
 }
 .myBoardTab tr{
@@ -56,6 +56,7 @@
 	width:54%;
 	text-align: left;
 }
+
 .myBoardTab tr th:nth-child(3),
 .myBoardTab tr th:nth-child(4){
 	width:13%;
@@ -66,4 +67,9 @@
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
+	cursor: pointer;
+}
+.myBoardTab tr td a:hover{
+	color: #6E6E6E;
+	font-weight: bolder;
 }
