게시판 css 작업 and 국내 코로나 현황 기능 작업 중

--- a/2weeks/src/main/webapp/resources/css/freeboard/searchBoardList.css
+++ b/2weeks/src/main/webapp/resources/css/freeboard/searchBoardList.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+
+*{
+font-family :'Pretendard'	
+}
+
 .category{
  	font-size:12px;
  }
