--- a/2weeks/src/main/webapp/resources/css/freeboard/readView.css
+++ b/2weeks/src/main/webapp/resources/css/freeboard/readView.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+
+*{
+font-family :'Pretendard'	
+}
 .container {
   padding-right: 30px;
   padding-left: 30px;
