--- a/2weeks/src/main/webapp/resources/css/news/covidNews.css
+++ b/2weeks/src/main/webapp/resources/css/news/covidNews.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+
+*{
+font-family :'Pretendard'	
+}
+
 
 .btn-primary:hover,
 .btn-primary:focus {
