메인 국내 현황 완료

--- a/2weeks/src/main/webapp/resources/css/common/main.css
+++ b/2weeks/src/main/webapp/resources/css/common/main.css
@@ -121,7 +121,20 @@
     font-weight: bolder;
 }
 
+.today{
+	padding-top : 25px;
+	font-size: 18px;
+	font-weight: bolder;
+	text-align: center;
+	line-height: 40px;
+}
 
+.todayCnt{
+	text-align: center;
+	font-weight: bolder;
+	font-size: 17px;
+	padding-top : 15px;
+}
 
 
 
